# vault

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  PLAN.md  README.md  RESEARCH.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
crates/files/: Cargo.toml
crates/vault-shared/: Cargo.toml
crates/vault-shared/src/: files.rs  lib.rs  main.rs
desktop/: package.json  sidebar-plan.md  tsconfig.json  tsdown.config.ts
desktop/scripts/: copy-renderer-assets.mjs  dev.mjs
desktop/src/: cached-title-search.ts  command-palette.tsx  editor-embed.ts  editor-media.ts  embed-providers.ts  fff-search.ts  file-tree-feature.tsx  icon-close.tsx  icon-sort.tsx  index.html  link-popup-service.ts  main.js  main.ts  media-layout-service.ts  media-layout.ts  media-migration.ts  media-protocol.ts  media-resolver.ts  media-response.ts  media-types.ts  native-menu-service.ts  note-event-broadcaster.ts  note-events.ts  note-file-service.ts  notes-ipc.ts  preload.mjs  preload.ts  renderer-api.ts  renderer.js  renderer.tsx  search-types.ts  search-utils.ts  settings-panel.tsx  styles.css  tab-bar.tsx  tabs.ts  vault-api.ts  vault-paths.ts  vault-selection-screen.tsx  vault-session.ts  (+2 more)
experimental/native-markdown/: .gitignore  Cargo.toml  MARKDOWN_FEATURES.md  PROGRESS.md  README.md
experimental/vault-mac/: .gitignore  PROGRESS.md
metrics/: README.md  desktop-memory-runs.jsonl
mobile/: README.md  app.json  package.json
scripts/: build-files.mjs  build-vault-shared.mjs  desktop-release-memory.ts
sync-api/: package.json
sync-api/src/: server.ts
(+47 files in other folders)
